Fixed line break in notes

--- a/react-to-do-list/src/Components/Note/Note.module.css
+++ b/react-to-do-list/src/Components/Note/Note.module.css
@@ -5,6 +5,10 @@
     border: 1px solid black;
     margin: 10px;
     background: white;
+    
+}
+.note p{
+    overflow: auto;
 }
 
 .note button{
